Fix the navebar z-index

--- a/about.scss
+++ b/about.scss
@@ -26,6 +26,7 @@ body {
     width: 100%;
     height: 67px;
     position: fixed;
+    z-index: 15;
 
     .nav-a {
       display: none;
